@@ -1,1 +1,5 @@
 * Multithreading
+* More number types:
+  - Big integers
+  - Fractions
+  - Complex numbers (as pairs of two numbers of same type)
